# minifier

./: Cargo.toml  LICENSE  README.md  build.ts  cli.ts  example.ts  minificationMethods.ts  minifier.ts  minifiers.ts  mod.ts  wasm.js
.github/workflows/: deno.yml
src/: lib.rs
tests/: minify.test.ts
